# nbfc-linux

./: .gitignore  CHANGELOG.md  DEVELOPER.md  Makefile  Makefile.in  ORIGINAL.md  PROTOCOL.md  README.md  README.md.in  TODO  autogen.sh  build-appimage.sh  configure.ac  default.nix  flake.nix  nbfc.py  nbfc.py.in  nixos-installation-new.md  nixos-installation.md  test.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  default.md  feature_request.yaml  model_request.yaml
completion/: Makefile  README.md  ec_probe.py  ec_probe.yaml  generate.sh  nbfc.py  nbfc.yaml  nbfc_service.py  nbfc_service.yaml
completion/bash/: ec_probe  ec_probe.in  nbfc  nbfc.in  nbfc_service  nbfc_service.in
completion/fish/: ec_probe.fish  ec_probe.fish.in  nbfc.fish  nbfc.fish.in  nbfc_service.fish  nbfc_service.fish.in
completion/zsh/: _ec_probe  _ec_probe.in  _nbfc  _nbfc.in  _nbfc_service  _nbfc_service.in
data/: nbfc-linux.desktop  run
doc/: README.md  advanced_configuration.md  ec_probe.1  ec_probe.1.html  ec_probe.1.in  ec_probe.1.md  ec_probe.md  nbfc.1.html  nbfc.1.in  nbfc.1.md  nbfc.faq.7.html  nbfc.faq.7.in  nbfc.faq.7.md  nbfc.md  nbfc_service.1  nbfc_service.1.html  nbfc_service.1.in  nbfc_service.1.md  nbfc_service.json.5  nbfc_service.json.5.html  nbfc_service.json.5.in  nbfc_service.json.5.md  nbfc_service.json.md  nbfc_service.md
endpoints/: README.md  config_rating_rules_v1.json  firmware_upload_v1  firmware_upload_v2
etc/init.d/: .gitignore  nbfc_service.in  nbfc_service.openrc.in  nbfc_service.systemv.in
etc/systemd/system/: nbfc_service.service  nbfc_service.service.in
nbfc-gui/: about.py  client.py  common.py  fs_sensors.py  gtk.py  include_files.py  nbfc_client.py  qt.py  test-client.py  test-common.py
pkgbuilds/nbfc-linux/: PKGBUILD  PKGBUILD.in
pkgbuilds/nbfc-linux-git/: PKGBUILD
pkgbuilds/nix/: flake.nix
pkgbuilds/rpm/: Dockerfile  buildNBFC-LINUX  nbfc-linux.spec
share/nbfc/: model_support.json
share/nbfc/configs/: ASUS VivoBook X505ZA_X505ZA.json  ASUS Vivobook S 15 S5506MA.json  ASUS Vivobook S15-5506MA.json  ASUS Vivobook X580VD.json  ASUSTeK COMPUTER INC. X551CA.json  Acer Aspire 1410.json  Acer Aspire 1810T.json  Acer Aspire 1810TZ.json  Acer Aspire 1825PTZ.json  Acer Aspire 4750G.json  Acer Aspire 5738G.json  Acer Aspire 5745G.json  Acer Aspire 5749.json  Acer Aspire 5930.json  Acer Aspire 7551G.json  Acer Aspire 7735.json  Acer Aspire 7740G.json  Acer Aspire 7741G.json  Acer Aspire A315-57G-74A3.json  Acer Aspire A515-48M.json  Acer Aspire A715-41G.json  Acer Aspire E1-522.json  Acer Aspire E1-570G.json  Acer Aspire E1-572G.json  Acer Aspire E1-772.json  Acer Aspire E5-471G.json  Acer Aspire E5-475G.json  Acer Aspire E5-575G.json  Acer Aspire E5-731.json  Acer Aspire ES1-711.json  Acer Aspire LT-10Q.json  Acer Aspire Lite AL15-41.json  Acer Aspire One AO531h.json  Acer Aspire One AO721.json  Acer Aspire One AO751h.json  Acer Aspire One AOA110.json  Acer Aspire One AOA150.json  Acer Aspire S3.json  Acer Aspire S7-191.json  Acer Aspire S7-391.json  (+289 more)
src/: .gitignore  Makefile  acpi_analysis.c  acpi_analysis.h  acpi_call.c  acpi_call.h  after  aml_analysis.c  aml_analysis.h  aml_lexer.c  aml_lexer.h  aml_parser.c  aml_parser.h  before  bruteforce.c  buffer.c  buffer.h  build.c  cli99.c  cli99.h  client.c  config.h  config_analysis.c  config_analysis.h  config_rating.c  config_rating.h  config_rating_rules.c  config_rating_rules.h  ec.c  ec.h  ec_available.h  ec_debug.c  ec_debug.h  ec_dummy.c  ec_dummy.h  ec_linux.c  ec_linux.h  ec_probe.c  ec_sys_linux.c  ec_sys_linux.h  (+89 more)
src/client/: check_root.h  client_global.h  cmd_acpi_dump.c  cmd_config.c  cmd_donate.c  cmd_misc.c  cmd_rate_config.c  cmd_sensors.c  cmd_set.c  cmd_show_variable.c  cmd_start_stop.c  cmd_status.c  cmd_support.c  cmd_update.c  cmd_warranty.c  cmd_xml2json.c  config_files.c  config_files.h  curl_utils.c  curl_utils.h  dmi.c  dmi.h  mkdir_p.c  service_control.c  service_control.h  str_functions.c  str_functions.h
src/help/: client.help.h  ec_probe.help.h  nbfc_service.help.h
src/optparse/: .gitignore  Makefile  optparse-debug.c  optparse.c  optparse.h  optparse_test.c  test.py
src/test/: .gitignore  DSDT.dsl  Makefile  fingerprint_current_firmware.c  gen_make.py  test_acpi_call.c  test_aml_analysis.c  test_aml_lexer.c  test_config.c  test_xml2json.py
src/test/01-Basic/: 01-missing-NotebookModel.json  02-missing-FanConfigurations.json  03-invalid-size-FanConfigurations.json
src/test/02-FanConfiguration/: 01-missing-Write-Field.json  02-WriteRegister-and-WriteAcpiMethod.json  (+8 more)
tools/: FanControlConfigV3-schema.json  FanControlConfigV3-v1.0.0-schema.json  analyze-dsdt-dsl.py  config.json  config.py  config_to_json.py  config_to_md.py  ec_available.h.py  show-asset-downloads.py  stress-server.py  test-protocol.py  update_pkgbuild.py  update_readme.py
tools/deprecated/: config_to_c.py
xml/: Acer Aspire E5-471G.xml  Acer Aspire E5-575G.xml  Acer Aspire V3-571G.xml  Acer NC-A315-55G-73N7.xml  Acer Predator 17 G9-793-782K.xml  Asus K501UX.xml  Asus N551JB.xml  Asus ROG G75VX.xml  Asus Vivobook S15 K3502.xml  Asus X301A1.xml  Asus X540LA.xml  Asus Zenbook UX530U.xml  Gigabyte AERO 14KV8.xml  Gigabyte Aero16.xml  Gigabyte p35w v3.xml  HP ENVY x360 Convertible 15-bq1xx.xml  HP EliteBook 8560w.xml  HP EliteBook Folio 1040 G1.xml  HP Laptop 17-by1xxx.xml  HP Notebook 15-ac1xxx.xml  HP OMEN Notebook PC 15.xml  HP Pavilion Gaming Laptop 15-ec2xxx.xml  HP ProBook 640 G1.xml  HP Spectre x360 Convertible 15-ch0xx.xml  HP Victus 16-e0175AX.xml  HP Victus 16-e0xxx.xml  HP ZBook Studio G3.xml  Lenovo Ideapad 510s.xml  Lenovo Thinkpad L13.xml  Lenovo Yoga Slim7.xml  Makefile  README.md  fetch_from_orignal_nbfc.sh  transform_to_json.sh
xml/unmerged/: Acer Aspire A515-48M.xml  Acer Aspire E1-572G.xml  HP 245 G7 Notebook PC.xml  HP Omen 15-dc00xxxx.xml  HP Pavilion Gaming Laptop 15-ec0xxx.xml  HP ProBook 450 G2.xml  HP Spectre x360 Convertible 15-df1015ng.xml  HP ZBook Studio x360 G5.xml  Lenovo Thinkpad L13.xml  MECHREVO Jiaolong Series GK5NR0O.xml  Sony VAIO SVF15N1C5E.xml
(+160 files in other folders)
